[tool.poetry]
name = "rag-code-sorting-search"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
